scenarios/uc16-workload-scalability/keda/resources/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-uri: 'https://github.com/Caseraw/OpenShiftDemoTime'
    deployment.kubernetes.io/revision: '5'
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"php-app:latest","namespace":"scaling"},"fieldPath":"spec.template.spec.containers[?(@.name==\"php-app\")].image","paused":false}]'
    openshift.io/generated-by: OpenShiftWebConsole
  name: php-app
  namespace: scaling
  labels:
    app: php-app
    app.kubernetes.io/component: php-app
    app.kubernetes.io/instance: php-app
    app.kubernetes.io/name: php-app
    app.kubernetes.io/part-of: php-app
    app.openshift.io/runtime: php
    app.openshift.io/runtime-version: 8.2-ubi8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: php-app
        deployment: php-app
    spec:
      containers:
        - name: php-app
          image: 'image-registry.openshift-image-registry.svc:5000/scaling/php-app@sha256:548778d1575134b02cc9110c3a58b55dea66d3aab72ad8b460ad061caf20de3e'
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
